# FullStack-Web-Development-hw2

./: .gitignore  Dockerfile  libs_to_install.txt  pyproject.toml  readme.md
