[tool.poetry]
name = "fullstack-web-development-hw2"
version = "0.1.0"
description = ""
authors = ["Artur Prepelytsia <preart81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "^0.7.0"
anyio = "^4.7.0"
click = "^8.1.7"
colorama = "^0.4.6"
dnspython = "^2.7.0"
exceptiongroup = "^1.2.2"
faker = "^33.1.0"
fastapi = "^0.115.6"
greenlet = "^3.1.1"
h11 = "^0.14.0"
idna = "^3.10"
jinja2 = "^3.1.4"
markupsafe = "^3.0.2"
psycopg2-binary = "^2.9.10"
pydantic-core = "^2.27.1"
pydantic = "^2.10.3"
pymongo = "^4.10.1"
python-dateutil = "^2.9.0.post0"
six = "^1.17.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
typing-extensions = "^4.12.2"
uvicorn = {extras = ["standart"], version = "^0.33.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
